using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace KODUA
{
    public static class AnimatorParameters
    {
        public readonly static string LeftKick = "KickLeft";
        public readonly static string LeftPunch = "PunchLeft";
        public readonly static string RightKick = "KickRight";
        public readonly static string RightPunch = "PunchRight";
        public readonly static string Idle = "Idle";
        public readonly static string Laugh = "Laugh";
        public readonly static string Attack = "Attack";
    }

}